<resources>
    <string name="app_name">Marketplace</string>
    <string name="login">Login</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="criar_uma_nova_conta_cadastrar">Criar uma nova conta? Cadastrar.</string>
    <string name="marketplace">Marketplace</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="insira_seu_e_mail">Insira seu e-mail</string>
    <string name="insira_seu_usuario">Insira seu usuário</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="cat_logo_de_produtos">Catálogo de produtos</string>
    <string name="frutas">Frutas</string>
    <string name="legumes">Legumes</string>
    <string name="a_ougue">Açougue</string>
    <string name="padaria">Padaria</string>
    <string name="bebidas">Bebidas</string>
    <string name="limpeza">Limpeza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>